--- a/colab_playaround.ipynb
+++ b/colab_playaround.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "https://github.com/hamojb/AD_research/blob/main/colab_playaround.ipynb",
-      "authorship_tag": "ABX9TyNhfY5E1PQsms8ym++XhYkY",
+      "authorship_tag": "ABX9TyOuh7ykDKWarYAlTigzr32k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3349,7 +3349,7 @@
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3365,7 +3365,7 @@
       "source": [
         "tf.test.gpu_device_name()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3397,7 +3397,7 @@
         "from tensorflow.python.client import device_lib\n",
         "device_lib.list_local_devices()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3564,7 +3564,7 @@
         "  empty_df = empty_df.dropna()\n",
         "  return empty_df"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3586,7 +3586,7 @@
         "img = nib.load(path)\n",
         "data = img.get_fdata()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3605,7 +3605,7 @@
         "slice_2 = data[:, :, 128]\n",
         "show_slices([slice_0, slice_1, slice_2], \"gray\")"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3653,7 +3653,7 @@
         "clinical_data['Inserted'] = pd.to_datetime(clinical_data['Inserted'])\n",
         "clinical_data['ID'] = clinical_data['ID'].str.extract('(\\d+)', expand=False).astype(int)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3669,7 +3669,7 @@
       "source": [
         "clinical_data"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3840,7 +3840,7 @@
         "scan_info['Inserted'] = pd.to_datetime(scan_info['Inserted'])\n",
         "scan_info['ID'] = scan_info['ID'].str.extract('(\\d+)', expand=False).astype(int)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3856,7 +3856,7 @@
       "source": [
         "scan_info"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4019,7 +4019,7 @@
         "scans_sorted = scan_and_diag.sort_values([\"Subject\", \"ID\"]).reset_index().drop(columns = [\"index\", \"ID\"])\n",
         "scans_sorted"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4166,10 +4166,11 @@
       "source": [
         "ALTERNATIVE_CASE = True\n",
         "if ALTERNATIVE_CASE: \n",
-        "  scans_sorted['cdr'] = scans_sorted['cdr'].astype(str).replace({'0.0':'HC', '0.5': 'MCI', '1.0': 'MCI', '2.0': 'AD', '3.0': 'AD'})\n",
+        "  scans_sorted['cdr'] = scans_sorted['cdr'].astype(str).replace({'0.0':'HC', '0.5': 'MCI', \n",
+        "                                                                 '1.0': 'AD', '2.0': 'AD', '3.0': 'AD'})\n",
         "scans_sorted"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4318,7 +4319,7 @@
         "for i in lst_scans: \n",
         "  our_scans.append(i.split('.')[0])"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4338,7 +4339,7 @@
       "source": [
         "our_scans = our_scans[:int(0.25*len(our_scans))]"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4366,7 +4367,7 @@
         "print(\"MRI scans of MCI cases: {}\".format(str(len(MCI_scan_paths))))\n",
         "print(\"MRI scans of HC cases: {}\".format(str(len(HC_scan_paths))))"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4403,7 +4404,7 @@
         "shuffle(subj_ids)\n",
         "len(subj_ids)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4436,7 +4437,7 @@
         "print(\"Desired validation patients: {}\".format(valid_num_subs))\n",
         "print(\"Desired test patients: {}\".format(test_num_subs))"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4458,7 +4459,7 @@
         "ad_subjs = cdr_AD.Subject.values\n",
         "use_this_val = len(list(set(ad_subjs)))"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4482,7 +4483,7 @@
         "validation_subjs = list(ad_subjs[int(use_this_val * 0.6):int(use_this_val * 0.8)])\n",
         "test_subjs = list(ad_subjs[int(use_this_val * 0.8):])"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4502,7 +4503,7 @@
         "      training_subjs.append(i)\n",
         "    union.append(i)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4515,7 +4516,7 @@
         "cdr_MCI = copy_scans_sorted[copy_scans_sorted['cdr'] == 'MCI']\n",
         "cdr_AD = copy_scans_sorted[copy_scans_sorted['cdr'] == 'AD']"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4528,7 +4529,7 @@
         "validation_data = copy_scans_sorted[copy_scans_sorted['Subject'].isin(validation_subjs)]\n",
         "test_data = copy_scans_sorted[copy_scans_sorted['Subject'].isin(test_subjs)]"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4551,7 +4552,7 @@
         "  print(\"MRI scans of HC cases in {} data: {}\".format(data_def, str(len(HC_scan_paths))))\n",
         "  return HC_scan_paths, MCI_scan_paths, AD_scan_paths"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4566,7 +4567,7 @@
       "source": [
         "train_HC, train_MCI, train_AD = return_scan_paths(training_data, 'training')"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4591,7 +4592,7 @@
       "source": [
         "val_HC, val_MCI, val_AD = return_scan_paths(validation_data, 'validation')"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4616,7 +4617,7 @@
       "source": [
         "test_HC, test_MCI, test_AD = return_scan_paths(test_data, 'test')"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4640,7 +4641,7 @@
         "train_HC = split_HC(train_HC)\n",
         "val_HC = split_HC(val_HC)\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4661,7 +4662,7 @@
         "  dummies = pd.get_dummies(ydata, columns=[\"Bridge_Types\"], prefix=[\"Type_is\"] )\n",
         "  return HC_labels, MCI_labels, AD_labels"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4686,7 +4687,7 @@
         "!pip install tqdm\n",
         "!pip install ipywidgets"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4789,7 +4790,7 @@
         "\n",
         "y_train = return_labels(training_data)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4906,7 +4907,7 @@
         "\n",
         "y_val = return_labels(validation_data)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5023,7 +5024,7 @@
         "\n",
         "y_test = return_labels(test_data)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5104,7 +5105,7 @@
       "source": [
         ""
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5115,7 +5116,7 @@
       "source": [
         ""
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5126,7 +5127,7 @@
       "source": [
         ""
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5137,7 +5138,7 @@
       "source": [
         ""
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5148,7 +5149,7 @@
       "source": [
         ""
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5159,7 +5160,7 @@
       "source": [
         ""
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5170,7 +5171,7 @@
       "source": [
         ""
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5200,7 +5201,7 @@
         "model = torch.hub.load('facebookresearch/deit:main', 'deit_base_patch16_384', pretrained=True)\n",
         "model.eval()"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5486,7 +5487,7 @@
       "source": [
         ""
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5497,7 +5498,7 @@
       "source": [
         ""
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5508,7 +5509,7 @@
       "source": [
         ""
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5527,7 +5528,7 @@
         "\n",
         "len(y_train)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5564,7 +5565,7 @@
         "y_val = np.array(label_encoder.fit_transform(y_val))\n",
         "y_test = np.array(label_encoder.fit_transform(y_test))"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5579,7 +5580,7 @@
       "source": [
         "y_train"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5629,7 +5630,7 @@
         "    .prefetch(2)\n",
         ")"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5640,7 +5641,7 @@
       "source": [
         ""
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5655,7 +5656,7 @@
       "source": [
         "train_dataset"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5683,7 +5684,7 @@
       "source": [
         "train_loader"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5707,7 +5708,7 @@
       "source": [
         ""
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5723,7 +5724,7 @@
       "source": [
         "!pip install transformers"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5826,7 +5827,7 @@
         "\n",
         "pipes = pipeline(task = 'feature-extraction', model = 'facebook/deit-small-distilled-patch16-224')"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6037,7 +6038,7 @@
         "\n",
         "train_generator = train_datagen.flow_from_dataframe(dataframe = train_dataset)"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
